--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .swiper {
-  width: 50%;
+  width: 500px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -46,11 +46,10 @@
 .swiper-slide {
   background-position: center;
   background-size: cover;
-  width: 300px;
-  height: 300px;
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
+  height: 100%;
 }
