--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,8 @@
 }
 
 .swiper {
-  width: 500px;
+  z-index: 0;
+  width: 480px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -51,5 +52,5 @@
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 270px;
 }
